fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -41,4 +41,9 @@ body {
   cursor: pointer;
 }
 
+.end-block{
+  margin-left: auto;
+  display: flex;
+}
+
 
